--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "nextjs-mdx-blog-starter",
-  "description": "Starter for creating a Next.js powered blog with content authored in MDX.",
-  "version": "0.1.0",
+  "name": "listful",
+  "description": "listfulは、フロントエンドエンジニアのためのチートシート型技術ブログです。",
+  "version": "0.2.0",
   "scripts": {
     "dev": "next -p 8853",
     "build": "next build",
     "start": "next start -p 8853",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "format-watch": "npm run format && onchange \"**/*.{js,jsx,json,md}\" -- prettier --write {{changed}}",
+    "ogp": "node scripts/svg-to-png.js",
     "deploy": "git push origin main && vercel --prod"
   },
   "dependencies": {
@@ -31,6 +32,6 @@
     "prettier": "^2.0.5",
     "sharp": "^0.26.1"
   },
-  "repository": "https://github.com/johnpolacek/nextjs-mdx-blog-starter",
+  "repository": "https://github.com/kurachiweb/listful",
   "license": "MIT"
 }
