--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "next-images": "^1.5.0",
     "onchange": "^7.0.2",
     "prettier": "^2.0.5",
-    "sharp": "^0.26.1"
+    "sharp": "0.26.1"
   },
   "repository": "https://github.com/kurachiweb/listful",
   "license": "MIT"
